# microchip-same70xplained-freertos

./: .gitignore  Makefile  README.md  cortexm7.cmake  gdb.cfg  gdb.sh
firmware/: CMakeLists.txt
firmware/src/: main.c
firmware/src/ASF/common/services/clock/same70/: sysclk.c
firmware/src/ASF/common/services/serial/: usart_serial.c
firmware/src/ASF/common/utils/: parts.h
firmware/src/ASF/common/utils/stdio/: write.c
firmware/src/ASF/sam/boards/same70_xplained/: init.c
firmware/src/ASF/sam/drivers/matrix/: matrix.c
firmware/src/ASF/sam/drivers/mpu/: mpu.c
firmware/src/ASF/sam/drivers/pio/: pio.c
firmware/src/ASF/sam/drivers/usart/: usart.c
firmware/src/ASF/sam/utils/linker_scripts/same70/same70q21/gcc/: flash.ld
firmware/src/Blinky_Demo/: main_blinky.c
firmware/src/Full_Demo/: IntQueueTimer.c  main_full.c
